ajout des lib fabric bootstrap

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "removeComments": false,
     "sourceMap": false,
     "inlineSourceMap": true,
-    "noEmitHelpers": true
+    "noEmitHelpers": true, 
+    "skipLibCheck": true
   },
   "awesomeTypescriptLoaderOptions": {
     "useBabel": true,
