--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "url": "https://github.com/rangle/rangle-starter/issues"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
     "express": "^4.13.4",
     "helmet": "^2.0.0",
     "http-proxy": "^1.13.2",
+    "office-ui-fabric-react": "^0.87.0",
     "winston": "^2.1.1"
   },
   "devDependencies": {
@@ -83,6 +86,7 @@
     "karma-sourcemap-writer": "^0.1.2",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
+    "node-sass": "^4.2.0",
     "nodemon": "^1.9.2",
     "object-assign": "^4.0.1",
     "passport": "^0.3.2",
@@ -105,6 +109,7 @@
     "redux-thunk": "^2.1.0",
     "require-hacker": "^2.1.3",
     "rimraf": "^2.4.3",
+    "sass-loader": "^4.1.1",
     "source-map-support": "^0.4.0",
     "style-loader": "^0.13.0",
     "stylelint": "^7.5.0",
